<resources>
    <string name="app_name">AndroidFrontEndApp</string>
    <string name="music">Music</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="communicate">Communicate</string>
    <string name="tts_engine">Tts engine</string>
    <string name="stt_engine">Stt engine</string>
    <string name="android_proektna">Android proektna</string>
    <string name="stefan_kjoropanovski_gmail_com">stefan.kjoropanovski@gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_a_name">Create a name</string>
    <string name="das">Like column</string>
    <string name="var">\"Likes: \"</string>
    <string name="fgh">Take picture</string>
    <string name="_0_01">0:01</string>
    <string name="_1_40">-1:40</string>
    <string name="listen_to_our_radio_station">Listen to our radio station</string>
    <string name="text_to_speech_group_menu"><![CDATA[Text to speech/> </group> </menu>]]></string>
    <string name="text_to_speech">Text to speech</string>
    <string name="enter_text_to_convert">Enter text to convert</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="enter">Enter</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="choose_a_language_default_english">Choose a language (default English)</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Italian</item>
        <item>German</item>
        <item>Japanese</item>
        <item>French</item>
    </string-array>
</resources>
